apps/shisha-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shisha-frontend
  namespace: shisha-frontend
spec:
  selector:
    app: shisha-frontend
  ports:
    - port: 80
      targetPort: 80
